# Student-Database-management-system

./: CMakeLists.txt
builf/: Makefile  cmake_install.cmake
src/: Admin.cpp  Admin.h  DatabaseManager.cpp  DatabaseManager.h  Student.cpp  Student.h  main.cpp
